Fix Craft4 deprecated code

--- a/src/templates/_settings.twig
+++ b/src/templates/_settings.twig
@@ -104,7 +104,7 @@
 
             {{ forms.autosuggestField({
                 label: 'APNS key secret',
-                instructions: '(Necessary if token based auth) Enter the private key secret (',
+                instructions: '(Necessary if token based auth) Enter the private key secret',
                 suggestEnvVars: true,
                 id: 'apnsTokenKeySecret',
                 name: 'settings[apnsTokenKeySecret]',
@@ -125,7 +125,7 @@
 
             {{ forms.autosuggestField({
                 label: 'APNS key secret',
-                instructions: '(Necessary if token based auth) Enter the private key secret (',
+                instructions: '(Necessary if token based auth) Enter the private key secret',
                 suggestEnvVars: true,
                 id: 'apnsKeySecret',
                 name: 'settings[apnsKeySecret]',
